		Since the "input" convention is so widespread, we have merged these two
		by calling the GPData instance "input".  Accordingly, the various demo
		applications have been modified (in their setup and evaluate and
		describe methods) to verify that "input" is of the right class and to
		cast it into the proper class at evaluation time.
	ADFContext parameters now officially deleted.  They'd been long deprecated.
	Updated MersenneTwister and MersenneTwisterFast
	MultiobjectiveFitness now specifies objective maximization on a per-objective
		basis rather than for all objectives.  Accordingly, the maximize variable
		has been changed to an array, and the isMaximizing() function has been
		deprecated and replaced with an isMaximizing(objective) function.  A new
		parameter has ben added to allow maximization on a per-objective basis.
		The maximization variable is now shared among all instances from the same
		prototype just like the minimum and maximum variables are.  This doesn't
		effect either NSGA2 or SPEA2.
	Bug fix in VectorSpecies to bug introduced when simulate binary crossover was 
		added: uniform crossover always has zero probability.  Thanks to
		Peter Lanze <pl@INDAL.DE>.
	Updated MersenneTwister and MersenneTwisterFast again
	Added the gpsemantics, klandscapes, lid, ordertree, and royaltree problems by
		James McDermott <jamesmichaelmcdermott@gmail.com> and Luca Manzoni
		<luca.manzoni@disco.unimib.it> as part of http://gpbenchmarks.org/
	ParameterDatabase.removeDeeply is now deprecated.
	New sections added to Manual about integration.
	ec.vector.VectorGene hereby renamed to ec.vector.Vector.  Also the
		default base for ec.vector.VectorGene changed from
		"vector.vect-gene" to "vector.gene".  
		ec.vector.Vector.P_VECTOR_GENE made private and deprecated
		to force the issue.
	Added a little double-checking on reading vector individuals from files
	Added a help message (see  java ec.Evolve -help  )
	Modified the version message to add new contributors